--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "vite": "^6.4.1"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.5.0"
   }
 }
